Added current location marker, added popUp in case persmission is denied

--- a/Lets_FindUs/app/src/main/res/values/strings.xml
+++ b/Lets_FindUs/app/src/main/res/values/strings.xml
@@ -6,4 +6,8 @@
 
 
     <string name="searchHint">Esegui una ricerca</string>
+    <string name="missing_permission_title">:(</string>
+    <string name="missing_permission_message">Purtroppo la nostra applicazione non può funzionare senza la localizzazione. Se non vuole garantire i permessi necessari nessun problema, semplicemente disinstalli l\'applicazione. Se invece si è sbagliato, vai alle impostazioni e dai il consenso per la localizzazione.</string>
+    <string name="missing_permission_positive_text">Concedi i permessi</string>
+    <string name="missing_permission_negative_text">Disinstalla l\'applicazione :(</string>
 </resources>
