--- a/Lets_FindUs/app/src/main/res/values/strings.xml
+++ b/Lets_FindUs/app/src/main/res/values/strings.xml
@@ -4,7 +4,8 @@
     <string name="title_favorites">Preferiti</string>
     <string name="title_profile">Profilo</string>
 
-
+    <string name="search">Search</string>
+    <string name="filter">Filter</string>
     <string name="searchHint">Esegui una ricerca</string>
     <string name="missing_permission_title">:(</string>
     <string name="missing_permission_message">Purtroppo la nostra applicazione non può funzionare senza la localizzazione. Se non vuole garantire i permessi necessari nessun problema, semplicemente disinstalli l\'applicazione. Se invece si è sbagliato, vai alle impostazioni e dai il consenso per la localizzazione.</string>
@@ -12,4 +13,5 @@
     <string name="missing_permission_negative_text">Disinstalla l\'applicazione :(</string>
     <string name="search_match_button">Cerca incontri in questa area</string>
     <string name="matching_button_show_meetings">Mostra incontri</string>
+
 </resources>
