--- a/Lets_FindUs/app/src/main/res/values/strings.xml
+++ b/Lets_FindUs/app/src/main/res/values/strings.xml
@@ -28,5 +28,6 @@
     <string name="edit_mode">Edit mode</string>
     <string name="settings">Settings</string>
     <string name="confirm">Confirm</string>
+    <string name="nickname">Nickname</string>
 
 </resources>
