--- a/Lets_FindUs/app/src/main/res/values/strings.xml
+++ b/Lets_FindUs/app/src/main/res/values/strings.xml
@@ -29,5 +29,7 @@
     <string name="settings">Settings</string>
     <string name="confirm">Confirm</string>
     <string name="nickname">Nickname</string>
+    <string name="social_hint">Nome profilo o link profilo</string>
+    <string name="mail_hint">nome@gmail.com</string>
 
 </resources>
