--- a/Lets_FindUs/app/src/main/res/values/strings.xml
+++ b/Lets_FindUs/app/src/main/res/values/strings.xml
@@ -36,5 +36,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="profile_photo_intro_string">Inserisci una foto profilo, ti raccomandiamo di scegliere una foto in cui tu possa essere riconosciuto!</string>
+    <string name="insert_obbligatory_data_string">Ora inserisci alcuni dati. Questi dati sono obbligatori per il funzionamento della nostra app!</string>
+    <string name="maschio">Maschio</string>
 
 </resources>
