--- a/Lets_FindUs/app/src/main/res/values/strings.xml
+++ b/Lets_FindUs/app/src/main/res/values/strings.xml
@@ -62,5 +62,7 @@
     <string name="clear_cache_confirm_label">Vuoi davvero pulire la cache?</string>
     <string name="yes">Si</string>
     <string name="no">Annulla</string>
+    <string name="missing_bluetooth_message">Non hai attivato il Bluetooth!</string>
+    <string name="missing_activate_bluetooth_positive_text">Attivalo</string>
 
 </resources>
