--- a/Lets_FindUs/app/src/main/res/values/strings.xml
+++ b/Lets_FindUs/app/src/main/res/values/strings.xml
@@ -64,5 +64,6 @@
     <string name="no">Annulla</string>
     <string name="missing_bluetooth_message">Non hai attivato il Bluetooth!</string>
     <string name="missing_activate_bluetooth_positive_text">Attivalo</string>
+    <string name="copied">Campo copiato negli appunti</string>
 
 </resources>
