Changed "ho capito"

--- a/Lets_FindUs/app/src/main/res/values/strings.xml
+++ b/Lets_FindUs/app/src/main/res/values/strings.xml
@@ -58,7 +58,7 @@
     <string name="name_tv_label">Nome</string>
     <string name="surname_tv_label">Cognome</string>
     <string name="responsibility_end_button_text">Fine</string>
-    <string name="done">\"Ho capito\"</string>
+    <string name="done">Ho capito</string>
 
 
     <!-- Impostazioni -->
